tests/baselines/reference/symbolDeclarationEmit12.errors.txt
symbolDeclarationEmit12.ts(4,9): error TS2564: Property '[Symbol.iterator]' has no initializer and is not definitely assigned in the constructor.
symbolDeclarationEmit12.ts(7,13): error TS2322: Type 'undefined' is not assignable to type 'I'.
symbolDeclarationEmit12.ts(9,13): error TS2300: Duplicate identifier '[Symbol.toPrimitive]'.
symbolDeclarationEmit12.ts(9,38): error TS2322: Type 'undefined' is not assignable to type 'I'.
symbolDeclarationEmit12.ts(10,13): error TS2300: Duplicate identifier '[Symbol.toPrimitive]'.


==== symbolDeclarationEmit12.ts (5 errors) ====
    namespace M {
        interface I { }
        export class C {
            [Symbol.iterator]: I;
            ~~~~~~~~~~~~~~~~~
!!! error TS2564: Property '[Symbol.iterator]' has no initializer and is not definitely assigned in the constructor.
            [Symbol.toPrimitive](x: I) { }
            [Symbol.isConcatSpreadable](): I {
                return undefined
                ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'I'.
            }
            get [Symbol.toPrimitive]() { return undefined; }
                ~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.toPrimitive]'.
                                         ~~~~~~
!!! error TS2322: Type 'undefined' is not assignable to type 'I'.
            set [Symbol.toPrimitive](x: I) { }
                ~~~~~~~~~~~~~~~~~~~~
!!! error TS2300: Duplicate identifier '[Symbol.toPrimitive]'.
        }
    }